--- a/extension.toml
+++ b/extension.toml
@@ -7,8 +7,8 @@ authors = ["thoroc <thomas.a.roche@gmail.com"]
 repository = "https://github.com/thoro/zed-wing"
 
 [language_servers.wing]
-name = "wing"
-language = "winglang"
+name = "Wing Language Server"
+language = "wing-language-server"
 
 [grammars.wing]
 repository = "https://github.com/winglang/tree-sitter-wing"
